Updated security, registration and login